8273323: [lworld] Fix post-parse call devirtualization with inline type receiver

Reviewed-by: vlivanov